mindtouch.graphql/Parser/GraphQL.atg
/*
 * MindTouch GraphQL 
 * Copyright (C) 2006-2016 MindTouch, Inc.
 * www.mindtouch.com  oss@mindtouch.com
 *
 * For community documentation and downloads visit mindtouch.com;
 * please review the licensing section.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *     http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 
// COCO Bugs
// * case-sensitive in unicode constants (e.g. '\u00AD' doesn't work)

using System.Collections.Generic;
using MindTouch.GraphQL.Syntax;

COMPILER GraphQL

CHARACTERS
	tab = '\t'.
	nl = '\n'.
	cr = '\r'.
	underscore = '_'.
	comma = ','.
	letter = 'a'..'z'.
	digit = '0'..'9'.
	hex = digit + "abcdef".
	doublequotechar  = ANY - '"' - '\\'.
	commentchar = ANY - '\r' - '\n'.

TOKENS

	name = ( underscore | letter ) { letter | digit | underscore }.
		
	string = 
		"\"" { 
			doublequotechar
			| "\\\'" | "\\\"" | "\\\\" | "\\/" | "\\a" | "\\b" | "\\f" | "\\n" | "\\r" | "\\t" | "\\v"
			| "\\u" hex hex hex hex
		} "\""
		.
	
	number =
		[ "-" ] (
			digit { digit } 
			| "." digit { digit } ["e" ["+" | "-"] digit { digit }]
			| digit { digit } ( "." digit {digit} ["e" ["+" | "-"] digit { digit }] | "e" ["+" | "-"] digit { digit })
		)
		.

	// reserved keywords
	true = "true".
	false = "false".
	null = "null".

PRAGMAS	
	comment 
		= '#' { commentchar } [ "\r\n" | "\r" | "\n" ]
		.

IGNORE nl + cr + tab + comma

PRODUCTIONS

	GraphQL =
		Document
		.

	Document =
		Definition { Definition }
		.

	Definition =
		OperationDefinition
		| FragmentDefinition
		.

	OperationDefinition =
		SelectionSet
		| OperationType [ OperationName ] [ VariableDefinitions ] [ Directives ] SelectionSet
		.

	OperationName =
		name
		.

	OperationType =
		"query"
		| "mutation"
		.

	SelectionSet =
		"{" Selection { Selection } "}"
		.

	Selection =
		Field
		| "..." (
			FragmentSpread
			InlineFragment
		)
		.

	Field =
		FieldName [ Arguments ] [ Directives ] [ SelectionSet ]
		.

	FieldName =
		name [ ":" name ]
		.

	Arguments =
		'(' Argument { Argument } ')'
		.

	Argument																		(. AGraphSyntaxValue value = null; .)
		=
		name ':' Value<out value>
		.

	FragmentSpread =
		FragmentName [ Directives ]
		.

	InlineFragment =
		"on" NamedType [ Directives ] SelectionSet
		.

	FragmentDefinition =
		"fragment" FragmentName "on" NamedType [ Directives ] SelectionSet
		.

	FragmentName =
		name
		.
		
	VariableDefinitions =
		"(" VariableDefinition { VariableDefinition } ")"
		.

	VariableDefinition =															(. AGraphSyntaxValue value = null; .)
		Variable<out value> ":" Type [ "=" Value<out value> ]
		.

	Type =
		NamedType [ "!" ]
		| ListType [ "!" ]
		.

	NamedType =
		name
		.

	ListType =
		"[" Type "]"
		.

	Directives =
		Directive { Directive }
		.

	Directive =
		"@" name [ Arguments ]
		.

	Value<out AGraphSyntaxValue value>												(. value = null; .)
		= Boolean<out value>
		| Number<out value>
		| String<out value>
		| Enum<out value>
		| Variable<out value>
		| List<out value>
		| InputObject<out value>
		.

	Boolean<out AGraphSyntaxValue value>											(. value = null; .)
		= true																		(. value = new GraphSyntaxLiteralBool(true); .)
		| false																		(. value = new GraphSyntaxLiteralBool(false); .)
		.

	Number<out AGraphSyntaxValue value> =
		number																		(. value = Utils.ToLiteralNumber(t.val); .)
		.

	String<out AGraphSyntaxValue value> =
		string																		(. value = Utils.ToLiteralString(t.val); .)
		.

	Enum<out AGraphSyntaxValue value>												(. string name = null; .)
		=
		Name<out name>																(. value = new GraphSyntaxLiteralEnum(name); .)
		.

	Variable<out AGraphSyntaxValue value>											(. string name = null; .)
		=
		"$" Name<out name>															(. value = new GraphSyntaxVariable(name); .)
		.

	List<out AGraphSyntaxValue value>												(. value = null; var values = new List<AGraphSyntaxValue>(); .)
		=
		"[" { 
			Value<out value>														(. values.Add(value); .)
		} "]"																		(. value = new GraphSyntaxList(values); .)
		.

	InputObject<out AGraphSyntaxValue value>										(. 
																						value = null; 
																						var fields = new List<GraphSyntaxInputObject.Field>(); 
																						GraphSyntaxInputObject.Field field = null;
																					.)
		=
		"{" 
			InputObjectField<out field>												(. fields.Add(field); .)
			{ 
				InputObjectField<out field>											(. fields.Add(field); .)
			} 
		"}"																			(. value = new GraphSyntaxInputObject(fields); .)
		.

	InputObjectField<out GraphSyntaxInputObject.Field field>						(. AGraphSyntaxValue value = null; string name = null; .)
		=
		Name<out name> "=" Value<out value>											(. field = new GraphSyntaxInputObject.Field(name, value); .)
		.

	Name<out string name>
		= name																		(. name = t.val; .)
		.

END GraphQL.
